discussion/kv_engine/166414/166414_rev2_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-49779: Optionally end OSO snapshot with SeqnoAdvance

Provide an opt-in method so that an OSO snapshot can end on the
highest seqno of the disk snapshot by including a SeqnoAdvance
message.

Change-Id: I7128e34ef77bc7ade23e17ca831707f8661d0603

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2021-11-26 13:13:34.000000000
Message: 
Uploaded patch set 2.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-11-26 13:27:41.000000000
Message: 
Patch Set 2: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/42050/ : FAILURE

Compile error at ..\kv_engine\engines\ep\tests\module_tests\collections\evp_store_collections_dcp_test.cc(3704): error C2664: "void CollectionsDcpTest::createDcpObjects(std::optional<std::string_view>,OutOfOrderSnapshots,uint32_t,bool,uint64_t)": cannot convert argument 2 from "bool" to "OutOfOrderSnapshots" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/42050/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/14218/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/collections/evp_store_collections_dcp_test.cc:3704:28: error: cannot initialize a parameter of type "OutOfOrderSnapshots" with an rvalue of type "bool" [clang-diagnostic-error]
    createDcpObjects({""}, false, 0, false /*sync replication*/);
                           ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/collections/collections_dcp_test.h:46:33: note: passing argument to parameter "outOfOrderSnapshots" here
            OutOfOrderSnapshots outOfOrderSnapshots = OutOfOrderSnapshots::No,
                                ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/14218/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/collections/evp_store_collections_dcp_test.cc:3704:28:
error: cannot initialize a parameter of type "OutOfOrderSnapshots" with an rvalue of type "bool" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/14218/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/15013/ : FAILURE

Compile error at [2021-11-26T13:17:37.512Z] ../kv_engine/engines/ep/tests/module_tests/collections/evp_store_collections_dcp_test.cc:3704:28:
error: cannot initialize a parameter of type "OutOfOrderSnapshots" with an rvalue of type "bool"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/15013/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/3850/ : FAILURE

Compile error at [2021-11-26T13:21:58.759Z] ../kv_engine/engines/ep/tests/module_tests/collections/evp_store_collections_dcp_test.cc:3704:28:
error: cannot initialize a parameter of type "OutOfOrderSnapshots" with an rvalue of type "bool"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/3850/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/16130/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/3925/ : FAILURE

Compile error at [2021-11-26T13:21:47.426Z] ../kv_engine/engines/ep/tests/module_tests/collections/evp_store_collections_dcp_test.cc:3704:28:
error: cannot convert ?bool? to ?OutOfOrderSnapshots?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/3925/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/15842/ : FAILURE

Compile error at [2021-11-26T13:20:00.426Z] ../kv_engine/engines/ep/tests/module_tests/collections/evp_store_collections_dcp_test.cc:3704:28:
error: cannot convert ?bool? to ?OutOfOrderSnapshots?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/15842/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/24222/ : FAILURE

Compile error at [2021-11-26T13:24:39.725Z] ../kv_engine/engines/ep/tests/module_tests/collections/evp_store_collections_dcp_test.cc:3704:28:
error: cannot initialize a parameter of type "OutOfOrderSnapshots" with an rvalue of type "bool"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/24222/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/16878/ : FAILURE

Compile error at [2021-11-26T13:19:54.171Z] ../kv_engine/engines/ep/tests/module_tests/collections/evp_store_collections_dcp_test.cc:3704:28:
error: cannot initialize a parameter of type "OutOfOrderSnapshots" with an rvalue of type "bool"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/16878/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/35683/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/13024/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
